tests/errors/attribute-repr-enum-payload.ari
@repr(C)
enum Maybe {
  None,
  Some(i32),
}

fn main() -> i64 {
  return 0;
}
